--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "seed": "node seeds/seed.js",
-    "watch": "nodeman server.js"
+    "watch": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
