--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "eslint --ext .js ./",
     "start": "node server.js",
     "seed": "node seeds/seed.js",
-    "watch": "nodemon server.js"
+    "watch": "nodemon server.js",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -19,9 +20,21 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
+    "moment": "^2.29.4",
     "mysql2": "^2.2.5",
-    "nodemon": "^2.0.22",
     "sequelize": "^6.29.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.36.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.21",
+    "prettier": "^2.8.6",
+    "supertest": "^6.3.3"
   },
   "repository": {
     "type": "git",
