--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "handlebars": "^4.7.7",
     "moment": "^2.29.4",
     "mysql2": "^2.2.5",
+    "node-fetch": "^3.3.1",
     "sequelize": "^6.29.3"
   },
   "devDependencies": {
