--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "eslint --ext .js ./",
-    "start": "node index.js",
+    "start": "node server.js",
     "seed": "node seeds/seed.js",
     "watch": "nodemon server.js",
     "prepare": "husky install"
