--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "user-list",
   "version": "1.0.0",
-  "engines":{
+  "engines": {
     "node": "16.x"
   },
   "main": "server.js",
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^4.1.1",
     "animejs": "^3.2.1",
     "bcrypt": "^5.0.0",
     "connect-session-sequelize": "^7.1.5",
